Userservice, jwt token, kayıt olma, giriş yapma işlemleri tamamlandı.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.14.3
@@ -46,8 +48,8 @@ services:
     image: wurstmeister/kafka:latest
     container_name: gezi-rehber-kafka
     ports:
-      - "9092:9092"  # dışarıya açılan port
-      - "9093:9093"  # iç iletişim için port
+      - "9092:9092"
+      - "9093:9093"
     environment:
       KAFKA_ADVERTISED_LISTENERS: INSIDE://localhost:9093,OUTSIDE://localhost:9092
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
@@ -55,18 +57,17 @@ services:
       KAFKA_LISTENER_NAMES: INSIDE,OUTSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_MAX_MESSAGE_SIZE: 104857600  # 100 MB
+      KAFKA_MAX_MESSAGE_SIZE: 104857600
     networks:
       - common
-
 
 
 networks:
   common:
     driver: bridge
 
+
 volumes:
   elasticsearch-data:
     driver: local
-  kibana-data:
-    driver: local
+
