--- a/place-service/pom.xml
+++ b/place-service/pom.xml
@@ -91,6 +91,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.turkcell</groupId>
 			<artifactId>tcell.exception3</artifactId>
 			<version>2.0.5</version>
