--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.turkcell</groupId>
+			<artifactId>tcell.exception3</artifactId>
+			<version>2.0.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
