--- a/favorite-place-service/pom.xml
+++ b/favorite-place-service/pom.xml
@@ -54,9 +54,9 @@
 			<version>2.2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.turkcell</groupId>
-			<artifactId>tcell.exception3</artifactId>
-			<version>2.0.5</version>
+			<groupId>io.github.oguzhansecgel</groupId>
+			<artifactId>exception</artifactId>
+			<version>2.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
