--- a/place-service/pom.xml
+++ b/place-service/pom.xml
@@ -96,9 +96,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.turkcell</groupId>
-			<artifactId>tcell.exception3</artifactId>
-			<version>2.0.5</version>
+			<groupId>io.github.oguzhansecgel</groupId>
+			<artifactId>exception</artifactId>
+			<version>2.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
