--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -92,11 +92,13 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.github.tcell-gygy-pair3/core -->
 		<dependency>
-			<groupId>io.github.oguzhansecgel</groupId>
-			<artifactId>exception</artifactId>
-			<version>2.0.6</version>
+			<groupId>io.github.tcell-gygy-pair3</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
